[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sy-stock-api"
version = "0.1.0"
description = "Korea Stock Broker API Integration Library"
authors = [{name = "Seungyeon Kim", email = "ksy02k@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Kimseonu0919/sy-stock-api"